<resources>
  <string name="app_name">Asset Subscriber</string>
  <string name="ably_asset_tracking">Ably Asset Tracking</string>
  <string name="start_button_ready">Start</string>
  <string name="start_button_working">Stop</string>
  <string name="trackable_id">Trackable ID</string>
  <string name="animation">Animation</string>
  <string name="asset_status_label">The asset is</string>
  <string name="asset_status_offline">OFFLINE</string>
  <string name="asset_status_online">ONLINE</string>
  <string name="asset_status_failed">FAILED</string>
  <string name="resolution_accuracy">Accuracy</string>
  <string name="resolution_minimum_displacement">Min displacement</string>
  <string name="resolution_minimum_displacement_value">%.1fm</string>
  <string name="resolution_desired_interval">Desired interval</string>
  <string name="resolution_desired_interval_value">%dms</string>
  <string name="error_starting_subscriber_failed">Starting subscriber error</string>
  <string name="error_stopping_subscriber_failed">Stopping subscriber error</string>
  <string name="error_no_trackable_id">Insert trackable ID</string>
  <string name="error_changing_resolution_failed">Changing resolution error</string>
    <string name="subscriber_resolution_title">Subscriber\'s requested resolution</string>
  <string name="publisher_resolution_title">Publisher\'s calculated resolution</string>
  <string name="animation_options_dialog_title">Animation Options</string>
  <string name="dialog_ok_button">OK</string>
  <string name="animation_option_show_raw_marker_title">Raw marker</string>
  <string name="animation_option_show_raw_accuracy_title">Raw accuracy</string>
  <string name="animation_option_show_enhanced_marker_title">Enhanced marker</string>
  <string name="animation_option_show_enhanced_accuracy_title">Enhanced accuracy</string>
  <string name="animation_option_animate_camera_movement_title">Camera animation</string>
</resources>
